# Mnist_cplusplus

./: CMakeLists.txt  MNIST.h  README.md  main.cpp
python_code/: convert_model2onnx.py
